--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,15 +33,21 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y python3-pip build-essential git python3 python3-dev ffmpeg libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev libavcodec-dev zlib1g-dev
     
+    - name: Configure Git for buildozer
+      run: |
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
+        git config --global init.defaultBranch main
+    
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install buildozer cython==0.29.33
         pip install -r requirements.txt
     
-    - name: Build with Buildozer
+    - name: Build with Buildozer (using minimal spec)
       run: |
-        buildozer android debug
+        buildozer -v android debug -f buildozer_minimal.spec
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
