--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,28 +5,26 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Fetch full history for buildozer
     
-    - name: Set up Python
+    - name: Set up Python 3.9
       uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: 3.9
     
-    - name: Set up Java
+    - name: Set up JDK 11
       uses: actions/setup-java@v4
       with:
-        distribution: 'temurin'
         java-version: '11'
-    
-    - name: Setup Android SDK
-      uses: android-actions/setup-android@v2
+        distribution: 'temurin'
     
     - name: Install system dependencies
       run: |
@@ -38,16 +36,29 @@ jobs:
         git config --global user.email "action@github.com"
         git config --global user.name "GitHub Action"
         git config --global init.defaultBranch main
+        git config --global --add safe.directory /github/workspace
+        git config --global --add safe.directory '*'
     
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install buildozer cython==0.29.33
+        pip install buildozer==1.5.0 cython==0.29.33
         pip install -r requirements.txt
+    
+    - name: Create .buildozer directory and clean state
+      run: |
+        mkdir -p .buildozer
+        rm -rf .buildozer/android
+        rm -f .buildozer/state.db
     
     - name: Build with Buildozer (using minimal spec)
       run: |
-        buildozer -v android debug -f buildozer_minimal.spec
+        export BUILDOZER_LOG_LEVEL=2
+        export GRADLE_OPTS="-Xmx2048m -Dorg.gradle.jvmargs=-Xmx2048m"
+        buildozer -v android debug --profile buildozer_minimal.spec
+      env:
+        ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+        ANDROID_HOME: /usr/local/lib/android/sdk
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
